# cpp-skip

./: .clang-format  CMakeLists.txt  README.md
src/app/: main.cpp
src/lib/: skip.cpp
